--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,31 +1,35 @@
+:root {
+    --color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black);
+  }
+  
 html {
     scroll-behavior: smooth;
   }
+ 
 body {
     color: #161616;
-    --text-color: var(--color-black);
+    color: var(--text-color);
 
   }
   a {
     color: #161616; /* Text color */
+    color: var(--text-color);
 }
 .visually-hidden {
     display: none;
 }
 .card-category {
     color: #D73953;
-    --color-primary:#d73953;
+    color: var(--color-primary);
 }
 .section-tagline {
     color: #D73953; /* Text color */
-    --color-primary:#d73953;
+    color: var(--color-primary);
+    
 }
-:root {
-    --color-primary:#d73953;
-    --color-black: #090909;
-    --color-white: #ffffff;
-    --color-light-grey: #f3f3f3;
-    --color-dark-grey: #353535;
-    --text-color: var(--color-black);
 
-}
