--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -5,6 +5,7 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
+
   }
   
 html {
@@ -18,8 +19,11 @@ body {
   }
   a {
     color: #161616; /* Text color */
+    /* Ensure links declaration comes after headings */
     color: var(--text-color);
+
 }
+
 .visually-hidden {
     display: none;
 }
