--- a/0x02-CSS_advanced/styles/9-style.css
+++ b/0x02-CSS_advanced/styles/9-style.css
@@ -40,6 +40,7 @@
      color: #161616; /* Text color */
      /* Ensure links declaration comes after headings */
      color: var(--text-color);
+     text-decoration: none;
  
  }
  /* Set all 6 levels of section headings' font-family to font-family-title */
